# demo-parquet-sql-cli-rs

./: Cargo.toml  README.md
src/: main.rs
